# q-think-mcp

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
q_think_mcp/: __init__.py  __main__.py  server.py
tests/: test_think_server.py
